menulist of restaurants and getting menu for each restaurants

--- a/src/component/ResturantsCards/rescards.css
+++ b/src/component/ResturantsCards/rescards.css
@@ -9,14 +9,21 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 32px;
   margin: 32px 16px;
-  background-color: antiquewhite;
+ 
 }
 
 .card {
   width: 200px;
-  height: 200px;
-  background-color: black;
+  height: 250px;
+  background-color: #ffffff;
   cursor: pointer;
+  padding: 4px;
+  border-radius: 10px;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+  0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+  0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+  0 100px 80px rgba(0, 0, 0, 0.12);
+box-sizing: border-box;
 }
 .card:hover {
   transform: scale(0.95, 0.95);
@@ -26,11 +33,40 @@
 .cardimage {
   width: 100%;
   height: 50%;
-  border-radius: 10px;
-  background-color: rgb(134, 189, 236);
+  border-radius: 10px 10px 0px 0px;
 }
-.carddetail {
-  background-color: red;
-  height: 50%;
+.resdp {
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
+}
+
+.carddetail {
+  background-color: #fdfcfc;
+  height: 50%;
+  border-radius: 0px 0px 10px 10px;
+}
+.restitle {
+  margin: 0px;
+  padding: 0px;
+  align-items: center;
+  padding-top: 10px;
+}
+.resname {
+  margin: 0px;
+  padding: 0px;
+}
+.resdetails{
+  display: flex;
+  margin: 0px;
+  padding: 0px;
+  margin-left: 5px;
+  gap: 30px;
+}
+
+.resloc{
+  color: #706a6a;
+  margin: 0px;
+  padding: 0px;
+  
 }
