--- a/src/pages/Landing/landing.css
+++ b/src/pages/Landing/landing.css
@@ -1,4 +1,8 @@
+.landinghome {
+  height: auto;
+}
 .banner {
+  width: 100%;
   height: 400px;
   background-image: radial-gradient(
       circle,
@@ -9,6 +13,8 @@
     ),
     url("https://t3.ftcdn.net/jpg/02/57/29/88/360_F_257298837_B8n4pIKuxTVd2O9FyZAr44b4jU5FGnCH.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .banner-details {
@@ -30,69 +36,77 @@
 .title-name {
   margin: 0px;
   padding: 0px;
+  font-size: 3rem;
 }
 .title-details {
   margin: 0px;
   padding: 0px;
+  font-size: 1.5rem;
 }
 .searchfood-container {
   display: flex;
   align-items: center;
+  width: 70%;
 }
 .bannerlocation {
-  width: 200px;
+  min-width: 30%;
   height: 42px;
   border: none;
   border-radius: 5px 0px 0px 5px;
-  font-size: 20px;
+  font-size: 1rem;
 }
 .searchfood {
-  width: 400px;
+  width: 65%;
   height: 40px;
   border: none;
   border-radius: 0px 5px 5px 0px;
-  font-size: 20px;
+  font-size: 1rem;
 }
 
 .about {
   height: 350px;
+  width: 100%;
   background-color: #302219;
   display: flex;
-  justify-content: space-around;
+  align-items: center;
+  justify-content: center;
 }
-.aboutblock{
+
+.aboutblock {
+  width: 33%;
   margin: 0px;
   padding: 0px;
-  height: 100%;
   display: flex;
   flex-direction: column;
+  gap: 30px;
   align-items: center;
+  justify-content: space-evenly;
   color: #ffff;
   text-align: center;
 }
 
-.about1img{
-  height: 60%;
-  padding-top: 20px;
+.about1img {
+  height: 80%;
+  width: 20%;
+  padding: 20px;
 }
-.about2img{
-  height: 60%;
-  width: 280px;
-  padding-top: 20px;
+.about2img {
+  height: 90%;
+  width: 35%;
+  padding: 20px;
 }
-.about3img{
-  height: 50%;
-  width: 200px;
-  padding-top: 40px;
-  padding-bottom: 15px;
+.about3img {
+  height: 80%;
+  width: 35%;
+  padding: 20px;
 }
 
-.abouthead{
+.abouthead {
   margin: 0px;
   padding: 0px;
   margin-top: 20px;
 }
-.aboutdetail{
+.aboutdetail {
   margin: 0px;
   padding: 0px;
   width: 300px;
