--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -3,18 +3,18 @@
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
-  margin-top: 60px;
+  
 }
 .authcontainer {
-  width: 50%;
-  height: 550px;
+  width: max-content;
+  height: 100vh;
   border-radius: 20px;
   display: flex;
   align-items: center;
   gap: 40px;
 }
 .loginbox {
-  width: 60%;
+  width: 100%;
   height: 480px;
   border-radius: 5px;
   margin: 0px auto;
