--- a/src/pages/Resturants/RegisterResturant/addRestaurant.css
+++ b/src/pages/Resturants/RegisterResturant/addRestaurant.css
@@ -1,8 +1,55 @@
-.product-form {
-  width: 70%;
+.res-pro-container {
+  box-sizing: border-box;
+  margin: 0px;
+  width: 100%;
+}
+
+.res-register-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.res-nav-head {
+  margin-left: 80px;
+  font-size: 1rem;
+}
+.res-nav-h1 {
+  color: #6e39cb;
+}
+.res-nav-hr {
+  color: #6e39cb;
+  margin-top: -20px;
+  margin-left: 0px;
+  width: 80%;
+}
+
+.res-nav-p {
+  color: #6e39cb;
+  margin-top: 0px;
+}
+.res-signIn-btn {
+  background-color: red;
+  padding: 10px;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: 500;
+  font-size: 1.2rem;
+  cursor: pointer;
+  margin-right: 80px;
+}
+
+.ResAdd-container {
+  width: 85%;
+  padding-top: 40px;
+  margin: 0px auto;
+  margin-bottom: 50px;
+}
+
+.restaurant-form {
+  width: 80%;
   height: auto;
   margin: 0 auto;
-  margin-top: 50px;
+  margin-top: 60px;
   box-sizing: border-box;
   padding-bottom: 20px;
   border-radius: 10px;
@@ -14,82 +61,47 @@ h3 {
   text-align: center;
   padding-top: 20px;
 }
-.p-form-inputs {
+
+.res-form-inputs {
   display: flex;
   justify-content: space-between;
   margin: 0 50px;
   padding-bottom: 40px;
   gap: 20px;
 }
-.p-form-label {
+.reslabel {
   display: block;
   padding-bottom: 5px;
 }
-.p-input-text {
+.res-input-text {
   width: 100%;
   height: 30px;
-
   border: 1px solid #a3a1a1;
   border-radius: 5px;
-
   resize: horizontal;
 }
-
-.p-select-text {
+.res-input-file {
+  height: 30px;
+  border-radius: 5px;
+}
+.res-select-text {
   width: 100%;
   height: 35px;
-
   border: 1px solid #a3a1a1;
   border-radius: 5px;
 }
-.p-select-text option {
-
+.res-select-text option {
   color: #363434;
 }
 
-.p-media-box {
-  width: 90%;
-  height: 250px;
-  margin: 40px auto;
-  border-style: dashed;
-  border-color: #6e39cb;
-}
-.p-media-upload {
-  opacity: 0;
-  width: 100%;
-  height: 100%;
+.upload-itempic-btn {
   cursor: pointer;
 }
-.p-media-box h4 {
-  margin-top: -85px;
-  text-align: center;
-}
-
-.p-media-box p {
-  margin-top: -85px;
-  text-align: center;
-  color: red;
-}
-.product-list-img {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  vertical-align: middle;
-  margin-right: 10px;
-}
-.edit-p-list {
-  color: #6e39cb;
-}
-.pagination {
+.additemcontainer {
   display: flex;
-  justify-content: space-between;
-  margin: 5px 10px;
-}
-
-.edit-infoform {
-  padding-bottom: 0px;
-}
-.MuiStepLabel-label {
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .MuiTable-root {
@@ -103,45 +115,37 @@ h3 {
 }
 .MuiPaper-root {
   border-radius: 10px !important;
-border:1px solid #c2bfbf !important;
+  border: 1px solid #c2bfbf !important;
 }
 .MuiTableCell-root {
   color: #fff !important;
 }
 
-@media only screen and (max-width: 560px) {
-  .p-input-text .p-select-text {
-    width: 100%;
-    margin-top: 0;
-  }
-  .product-form {
-    width: 80%;
-  }
-  .p-form-inputs {
-    display: flex;
+@media only screen and (max-width: 1100px) {
+  .res-form-inputs {
     flex-direction: column;
   }
-  .MuiPaper-root {
-    width: 90vw !important;
-  }
 }
 
-@media screen and (min-width: 560px) and (max-width: 680px) {
-  .p-input-text .p-select-text {
-    width: 100%;
-    margin-top: 0;
-  }
-  .product-form {
-    width: 90%;
-  }
+@media only screen and (max-width: 570px) {
+  /* .res-register-nav {
+    margin-right: 20px;
+  } */
 }
 
-@media only screen and (min-width: 680px) and (max-width: 980px) {
-  .p-input-text .p-select-text {
-    width: 100%;
-    margin-top: 0;
+@media only screen and (min-width: 370px) and (max-width: 470px) {
+  /* .res-register-nav {
+    margin-right: 0px;
+  } */
+}
+@media only screen and (max-width: 520px) {
+  /* .res-register-nav {
+    margin-right: -58px;
+  } */
+  .res-nav-head {
+    margin-left: 40px;
   }
-  .product-form {
-    width: 90%;
+  .res-signIn-btn {
+    margin-right: 40px;
   }
 }
