--- a/src/pages/Resturants/RestaurantProfile/resprofile.css
+++ b/src/pages/Resturants/RestaurantProfile/resprofile.css
@@ -5,6 +5,91 @@
   gap: 20px;
   margin-bottom: 20px;
 }
+.resprofile-outlet-container {
+  width: 70%;
+  height: auto;
+  margin: 0 auto;
+  margin-top: 50px;
+  box-sizing: border-box;
+  padding-bottom: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 33px 6px rgba(155, 155, 155, 1),
+    0px 8px 8px 0px rgba(0, 0, 0, 0.15);
+  box-sizing: border-box;
+}
 .sidenav-resprofile {
   width: 20%;
+  margin: 0 auto;
+  box-sizing: border-box;
+  padding-bottom: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 33px 6px rgba(155, 155, 155, 1),
+    0px 8px 8px 0px rgba(0, 0, 0, 0.15);
+  box-sizing: border-box;
+}
+.sidenav-res {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.sidenav-menu {
+  background-color: aqua;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 15px 50px;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+a {
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 840px) {
+  .res-profile-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .sidenav-resprofile {
+    position: sticky;
+    top: 0;
+    /* display: flex; */
+    width: 95%;
+    background-color: #fff;
+    z-index: 3;
+    height: 100px;
+    border-radius: 0px 0px 10px 10px;
+    box-shadow: 0px 0px 33px 6px rgb(5, 5, 5),
+      0px 8px 8px 0px rgba(0, 0, 0, 0.15);
+  }
+  .sidenav-res {
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    height: fit-content;
+  }
+  .res-pro-head {
+    margin: 10px 0;
+    padding: 0;
+  }
+
+  .sidenav-menu {
+    background-color: aqua;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 5px 10px 10px 10px;
+    padding: 10px;
+  }
+  .resprofile-outlet-container {
+    margin-top: 10px;
+    width: 90%;
+  }
+}
+@media only screen and (max-width: 560px) {
+  .MuiPaper-root {
+    width: 100% !important;
+  }
 }
