--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,16 @@
-.round-dot {
+.veg-dot {
   width: 10px;
   height: 10px;
   border-radius: 50%;
+  background-color: green;
+  display: inline-block;
+  margin-right: 7px;
+}
+
+.nonveg-box {
+  width: 10px;
+  height: 10px;
+  background-color: red;
   display: inline-block;
   margin-right: 7px;
 }
