--- a/src/component/Cart/cart.css
+++ b/src/component/Cart/cart.css
@@ -58,7 +58,7 @@
   justify-content: start;
   padding: 10px;
 }
-.itemsInfo {
+.itemsInfoCart {
   width: 40%;
   font-size: 1rem;
   padding: 0px 20px;
