--- a/src/component/ResturantsCards/rescards.css
+++ b/src/component/ResturantsCards/rescards.css
@@ -9,7 +9,6 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 32px;
   margin: 32px 16px;
- 
 }
 
 .card {
@@ -20,10 +19,10 @@
   padding: 4px;
   border-radius: 10px;
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-  0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
-  0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-  0 100px 80px rgba(0, 0, 0, 0.12);
-box-sizing: border-box;
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
 }
 .card:hover {
   transform: scale(0.95, 0.95);
@@ -56,7 +55,7 @@ box-sizing: border-box;
   margin: 0px;
   padding: 0px;
 }
-.resdetails{
+.resdetails {
   display: flex;
   margin: 0px;
   padding: 0px;
@@ -64,9 +63,27 @@ box-sizing: border-box;
   gap: 30px;
 }
 
-.resloc{
+.resloc {
   color: #706a6a;
   margin: 0px;
   padding: 0px;
-  
+}
+
+@media only screen and (max-width: 1024px) {
+  .rescard {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media only screen and (max-width: 824px) {
+  .rescard {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+
+@media only screen and (max-width: 520px) {
+  .rescard {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
