--- a/src/component/Navbar/navbar.css
+++ b/src/component/Navbar/navbar.css
@@ -70,6 +70,40 @@
 .currentlocationdiv {
 }
 
-.logoutIcon:hover{
-color: red;
+.logoutIcon:hover {
+  color: red;
+}
+
+.nav-side {
+  width: 40%;
+  height: 500px;
+  background-color: aqua;
+  color: black;
+  display: none;
+}
+.navBar {
+  padding-right: 20px;
+}
+.nav-sidebar{
+  display: flex;
+  flex-direction: column;
+}
+@media only screen and (min-width: 640px) {
+  .navBar {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .nav-side {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    padding-right: 20px;
+    font-size: 1rem;
+    transition: all ease-in 0.5s;
+  }
+  .lnavbar {
+    display: none;
+  }
 }
