--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,5 +1,35 @@
-
+.custhomediv {
+  margin: 0px;
+  padding: 0px;
+}
 .home-container {
-  margin-top: 60px;
-  padding: 10px 150px;
+  margin: 100px;
+  margin-top: 100px;
+  position: relative;
+}
+
+@media only screen and (max-width: 824px) {
+  .home-container {
+    margin: 90px;
+    margin-top: 100px;
+  }
+}
+@media only screen and (min-width: 640px) and (max-width: 720px) {
+  .home-container {
+    margin: 70px;
+    margin-top: 100px;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .home-container {
+    margin: 60px;
+    margin-top: 100px;
+  }
+}
+@media only screen and (max-width: 360px) {
+  .home-container {
+    margin: 40px;
+    margin-top: 100px;
+  }
 }
