--- a/src/pages/Resturants/RestaurantMenu/addResMenu.css
+++ b/src/pages/Resturants/RestaurantMenu/addResMenu.css
@@ -1,4 +1,3 @@
-
 h3 {
   text-align: center;
   padding-top: 20px;
@@ -39,7 +38,6 @@ h3 {
   color: #363434;
 }
 
-
 .product-list-img {
   width: 30px;
   height: 30px;
@@ -78,7 +76,7 @@ h3 {
   border-radius: 5px;
   border: 1px solid black;
   cursor: pointer;
-   background-color: #a2a8a4;
+  background-color: #a2a8a4;
 }
 .additembtn-disable {
   width: 50%;
@@ -99,8 +97,8 @@ h3 {
 .edit-infoform {
   padding-bottom: 0px;
 }
-.MuiStepLabel-label {
-}
+/* .MuiStepLabel-label {
+} */
 
 .MuiTable-root {
   border-radius: 10px;
@@ -131,9 +129,9 @@ h3 {
     display: flex;
     flex-direction: column;
   }
-  .MuiPaper-root {
+  /* .MuiPaper-root {
     width: 90vw !important;
-  }
+  } */
   .additempic {
     display: block;
   }
