--- a/src/component/Navbar/navbar.css
+++ b/src/component/Navbar/navbar.css
@@ -75,19 +75,42 @@
 }
 
 .nav-side {
-  width: 40%;
-  height: 500px;
-  background-color: aqua;
+  width: 30%;
+  height: auto;
+  background-color: rgb(172, 192, 192);
   color: black;
   display: none;
 }
 .navBar {
   padding-right: 20px;
 }
-.nav-sidebar{
+.sidemenu {
+  margin-top: 120px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
 }
+.side-navbar {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  font-size: 1.4rem;
+  margin-top: 80px;
+  gap: 20px;
+}
+.sideclose {
+ list-style: none;
+ display: flex;
+ justify-content: end;
+  align-items: center;
+}
+.side-item {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  background-color: rgb(204, 203, 202);
+ 
+}
+
 @media only screen and (min-width: 640px) {
   .navBar {
     display: none;
@@ -96,14 +119,24 @@
 
 @media only screen and (max-width: 640px) {
   .nav-side {
-    display: flex;
-    align-items: center;
-    justify-content: end;
-    padding-right: 20px;
+    display: block;
+    padding: 30px;
     font-size: 1rem;
-    transition: all ease-in 0.5s;
+    transition: all ease-in-out 0.3s;
   }
   .lnavbar {
     display: none;
+  }
+}
+@media only screen and (max-width: 360px) {
+  /* .sideclose {
+  margin-top: 50px;
+  align-items: center;
+} */
+ .nav-side {
+    display: block;
+    padding: 20px;
+    font-size: 1rem;
+    transition: all ease-in-out 0.3s;
   }
 }
