--- a/src/pages/Resturants/RegisterResturant/addRestaurant.css
+++ b/src/pages/Resturants/RegisterResturant/addRestaurant.css
@@ -28,7 +28,7 @@
   margin-top: 0px;
 }
 .res-signIn-btn {
-  background-color: red;
+  background-color: #eba148;
   padding: 10px;
   border-radius: 5px;
   color: #fff;
