--- a/src/component/ResturantsCards/rescards.css
+++ b/src/component/ResturantsCards/rescards.css
@@ -14,7 +14,7 @@
 .card {
   width: 200px;
   height: 250px;
-  background-color: #ffffff;
+  background-color: #fff;
   cursor: pointer;
   padding: 4px;
   border-radius: 10px;
@@ -57,6 +57,7 @@
 }
 .resdetails {
   display: flex;
+  justify-content: space-evenly;
   margin: 0px;
   padding: 0px;
   margin-left: 5px;
@@ -67,6 +68,7 @@
   color: #706a6a;
   margin: 0px;
   padding: 0px;
+  margin-left: 15px;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -81,9 +83,38 @@
   }
 }
 
-
 @media only screen and (max-width: 520px) {
   .rescard {
     grid-template-columns: repeat(1, 1fr);
+  }
+  .card {
+    display: flex;
+    width: 100%;
+    height: 150px;
+    gap: 5px;
+  }
+  .cardimage {
+    height:100%;
+    width: 50%;
+  }
+  .carddetail {
+    height: 100%;
+    width: 50%;
+    border-radius: 10px;
+    
+  }
+  .restyp{
+    font-size: 1rem;
+  }
+  
+.resloc {
+
+  margin-top: 10px;
+  margin-left: 15px;
+}
+}
+@media only screen and (max-width: 420px) {
+   .restyp{
+    font-size: 3.5vw;
   }
 }
