css responsive-0.6 cart page

--- a/src/component/Cart/cart.css
+++ b/src/component/Cart/cart.css
@@ -46,8 +46,8 @@
 .cartTotal-container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 0px 60px;
+  justify-content: space-around;
+  /* padding: 0px 60px; */
 }
 .addedcart {
   background-color: #fff;
