--- a/src/pages/Resturants/RestaurantProfile/resprofile.css
+++ b/src/pages/Resturants/RestaurantProfile/resprofile.css
@@ -4,6 +4,7 @@
   align-items: center;
   gap: 20px;
   margin-bottom: 20px;
+   margin-top: 20px;
 }
 
 .resprofile-outlet-container {
@@ -39,6 +40,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+ 
 }
 
 .sidenav-menu {
@@ -66,6 +68,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 0px;
   }
   .sidenav-resprofile {
     position: sticky;
