--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -19,7 +19,8 @@
 }
 .loginbox {
   width: 100%;
-  height: 480px;
+  height: 450px;
+  padding-bottom: 20px;
   border-radius: 5px;
   margin: 0px auto;
   background-color: rgb(88, 99, 96);
