--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -19,7 +19,7 @@
 }
 .loginbox {
   width: 100%;
-  height: 450px;
+  /* height: auto; */
   padding-bottom: 20px;
   border-radius: 5px;
   margin: 0px auto;
